--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
 		"vite": "^6.0.5"
 	},
 	"dependencies": {
-		"@sveltestrap/sveltestrap": "^7.0.3"
+		"@sveltestrap/sveltestrap": "^7.0.3",
+		"moment": "^2.30.1"
 	}
 }
