--- a/backend/deno.json
+++ b/backend/deno.json
@@ -1,8 +1,6 @@
 {
 	"tasks": {
-		"dev": "deno run --watch main.ts",
-		"start": "deno run --unstable-cron --unstable-kv -A main.ts",
-		"download_kv": "deno run --unstable-cron --unstable-kv -A download_kv.ts"
+		"dev": "KV_STORE=kv.sqlite deno serve --unstable-cron --unstable-kv -A --watch main.ts"
 	},
 	"imports": {
 		"@oak/oak": "jsr:@oak/oak@^17.1.4",
