--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -15,17 +15,20 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [18.x, 20.x, 22.x]
-                # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+                node-version: [22.x]
+
+        defaults:
+            run:
+                working-directory: client
 
         steps:
             - uses: actions/checkout@v4
             - name: Use Node.js ${{ matrix.node-version }}
-              working-directory: frontend
               uses: actions/setup-node@v4
               with:
                   node-version: ${{ matrix.node-version }}
-                  cache: "npm"
+                  cache: "pnpm"
+                  cache-dependency-path: "frontend/pnpm-lock.yaml"
             - run: npm run build
               working-directory: frontend
             - name: Setup Pages
