--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -27,8 +27,8 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: ${{ matrix.node-version }}
-                  cache: "pnpm"
-                  cache-dependency-path: "frontend/pnpm-lock.yaml"
+                  cache: "npm"
+                  cache-dependency-path: "frontend/package-lock.json"
             - run: npm run build
               working-directory: frontend
             - name: Setup Pages
