--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -13,22 +13,16 @@ jobs:
     build:
         runs-on: ubuntu-latest
 
-        strategy:
-            matrix:
-                node-version: [22.x]
-
         defaults:
             run:
                 working-directory: client
 
         steps:
             - uses: actions/checkout@v4
-            - name: Use Node.js ${{ matrix.node-version }}
+            - name: Use Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: ${{ matrix.node-version }}
-                  cache: "npm"
-                  cache-dependency-path: "frontend/package-lock.json"
+                  node-version: "22.x"
             - run: npm run build
               working-directory: frontend
             - name: Setup Pages
