--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -19,10 +19,17 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v4
 
+            - uses: pnpm/action-setup@v4
+              name: Install pnpm
+              with:
+                  version: 10
+                  run_install: false
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
                   node-version: "22.x"
+                  cache: "pnpm"
+                  cache-dependency-path: frontend/pnpm-lock.yaml
 
             - name: Install dependencies
               run: npm ci
