--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,7 @@
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview",
-		"check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json",
-		"ci": "npm install"
+		"check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
 	},
 	"devDependencies": {
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
@@ -21,5 +20,6 @@
 	"dependencies": {
 		"@sveltestrap/sveltestrap": "^7.0.3",
 		"moment": "^2.30.1"
-	}
+	},
+	"packageManager": "pnpm@9.6.0"
 }
