--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -32,10 +32,10 @@ jobs:
                   cache-dependency-path: frontend/pnpm-lock.yaml
 
             - name: Install dependencies
-              run: npm ci
+              run: pnpm install
 
             - name: Build project
-              run: npm run build
+              run: pnpm run build
 
             - name: Setup Pages
               uses: actions/configure-pages@v5
