Update frontend.yml to upload all files from the build output directory

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -48,8 +48,7 @@ jobs:
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
-                  # Upload the build output from the "dist" folder
-                  path: frontend/dist
+                  path: frontend/dist/*
 
             - name: Deploy to GitHub Pages
               id: deployment
