--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -42,13 +42,16 @@ jobs:
             - name: Build project
               run: pnpm run build
 
+            - name: List build output
+              run: ls -R frontend/dist
+
             - name: Setup Pages
               uses: actions/configure-pages@v5
 
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
-                  path: frontend/dist/*
+                  path: frontend/dist/
 
             - name: Deploy to GitHub Pages
               id: deployment
