--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -43,7 +43,7 @@ jobs:
               run: pnpm run build
 
             - name: List build output
-              run: ls -R frontend/dist
+              run: ls -R dist
 
             - name: Setup Pages
               uses: actions/configure-pages@v5
